--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "easymde": "^2.18.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
+    "next": "14.0.3",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-simplemde-editor": "^5.2.0",
     "sonner": "^1.7.0",
@@ -49,13 +49,11 @@
     "@shadcn/ui": "^0.0.4",
     "@types/classnames": "^2.3.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "classnames": "^2.5.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
